# image2text

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
image2text/: api.py  backends.py  core.py  web_app.py
image2text.egg-info/: PKG-INFO  SOURCES.txt
